--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <select id="avatar-select" class="styled-select">
                     <option value="Maxx|Ash">Maxx (Ash)</option>
                     <option value="Terra|Sage">Terra (Sage)</option>
-                    <option value="Nova|Shimmer">Nova (Shimmer)</option>
+                    <option value="Nova|Nova">Nova (Nova)</option>
                     <option value="Nyxari|Coral">Nyxari (Coral)</option>
                 </select>
                 <select id="quality-select" class="styled-select">
