--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; font-src 'self'; connect-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-eTTS2025'; style-src 'self' 'nonce-eTTS2025'; img-src 'self' data:; font-src 'self'; connect-src 'self'">
     <title>eTTS by dormarox</title>
-    <style>
+    <style nonce="eTTS2025">
         * {
             margin: 0;
             padding: 0;
@@ -783,7 +783,7 @@
         </div>
     </div>
 
-    <script>
+    <script nonce="eTTS2025">
         // INIT: Deklariere Global Variables ZUERST
         let selectedCharacter = 'Maxx|ash';  // Standard-Charakter
         
