--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-eTTS2025'; style-src 'self' 'nonce-eTTS2025'; img-src 'self' data:; font-src 'self'; connect-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-eTTS2025'; style-src 'self' 'nonce-eTTS2025'; img-src 'self' data:; font-src 'self'; connect-src 'self'; media-src 'self' blob:">
     <title>eTTS by dormarox</title>
     <style nonce="eTTS2025">
         * {
