--- a/index.html
+++ b/index.html
@@ -737,19 +737,19 @@
                 <button class="carousel-nav prev">❮</button>
                 <div class="carousel-container">
                     <div class="character-carousel">
-                        <div class="character-card" data-character="Maxx|Ash">
+                        <div class="character-card" data-character="Maxx|ash">
                             <img src="assets/images/maxx.png" alt="Maxx">
                             <div class="name">Maxx</div>
                         </div>
-                        <div class="character-card" data-character="Terra|Sage">
+                        <div class="character-card" data-character="Terra|nova">
                             <img src="assets/images/terra.png" alt="Terra">
                             <div class="name">Terra</div>
                         </div>
-                        <div class="character-card" data-character="Nova|Nova">
+                        <div class="character-card" data-character="Nova|sage">
                             <img src="assets/images/nova.png" alt="Nova">
                             <div class="name">Nova</div>
                         </div>
-                        <div class="character-card" data-character="Nyxari|Coral">
+                        <div class="character-card" data-character="Nyxari|shimmer">
                             <img src="assets/images/nyxari.png" alt="Nyxari">
                             <div class="name">Nyxari</div>
                         </div>
